Ext4: Fix icon jumping in menus

--- a/api/webapp/ext-theme/harvest/ext-all-debug.css
+++ b/api/webapp/ext-theme/harvest/ext-all-debug.css
@@ -16220,6 +16220,7 @@ body.x4-nbr .x4-grid-row-editor-buttons-default-top-frameInfo {
 .x4-menu-item {
   padding: 1px;
   cursor: pointer;
+  border: 1px solid transparent;
 }
 
 /* line 46, ../../../../ext/packages/ext-theme-neutral/sass/src/menu/Menu.scss */
@@ -16239,7 +16240,6 @@ body.x4-nbr .x4-grid-row-editor-buttons-default-top-frameInfo {
   border-color: #b4b4b4;
   border-width: 1px;
   border-style: solid;
-  padding: 0;
 }
 /* line 75, ../../../../ext/packages/ext-theme-neutral/sass/src/menu/Menu.scss */
 .x4-nlg .x4-menu-item-active {
